# DualDraw

./: BACKUPCMakeLists.txt  CMakeLists.txt  main.cpp  readme.md
firmware/: platformio.ini
firmware/include/config/: config.hpp
serial/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  serial.sln  serial.vcxproj  serial.vcxproj.filters
serial/Debug/: serial.exp  serial.ilk  serial.lib
serial/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
serial/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
serial/cppLibBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  serial.sln  serial.vcxproj  serial.vcxproj.filters
serial/cppLibBuild/RelWithDebInfo/: serial.exp  serial.ilk  serial.lib
serial/cppLibBuild/serial.dir/RelWithDebInfo/serial.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  serial.write.1u.tlog
serial/cppLibBuild/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog
serial/cppLibBuild/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
serial/serial.dir/Debug/serial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  serial.write.1u.tlog
serial/src/cppLib/: lib.cpp
serial/src/crashAnalyzer/: analyze.cpp
serial/src/serial/: shared.cpp
